将原先的列表划分为了Vtuber/Group

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
     <body>
         <ul class="title">
             <li class="title"><a class="main_page" href="/index">Project Palette</a></li>
-            <li class="title"><a href="/list">列表</a></li>
+            <li class="title"><a href="/vtb_list">管人列表</a></li>
+            <li class="title"><a href="/group_list">社团/企业列表</a></li>
         </ul>
         {% block content %}
         {% endblock %}
