--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
             <li class="title"><a class="main_page" href="/index">Project Palette</a></li>
             <li class="title"><a href="/vtb_list">管人列表</a></li>
             <li class="title"><a href="/group_list">社团/企业列表</a></li>
+            <li class="title"><a href="/data_list">数据汇总</a></li>
         </ul>
         {% block content %}
         {% endblock %}
