稍微改了一点点描述

--- a/app/templates/vtb_data.html
+++ b/app/templates/vtb_data.html
@@ -42,7 +42,7 @@
                     },
                     title: {
                         left: 'center',
-                        text: '大数据量面积图',
+                        text: '频道订阅量',
                     },
                     toolbox: {
                         feature: {
