--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,27 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link href="https://fonts.font.im/css?family=Lato:100,400" rel="stylesheet">
         {% if title %}
             <title>{{ title }} - Project Palette</title>
         {% else %}
             <title>欢迎访问Project Palette!</title>
         {% endif %}
         <style>
+            @import url('https://fonts.font.im/css?family=Lato');
+
+            #navigate {
+                height: 50px;
+            }
+
+            #hot-vtubers {
+                margin-top: 20px;
+                width: 480px;
+            }
+
+            #web-info {
+                margin-top: 20px;
+            }
+
             #title {
                 margin-left: 20px;
                 margin-top: 20px;
@@ -19,10 +33,11 @@
                 background-image: linear-gradient(to right, #00FFFD , #FF86DA);
                 text-decoration: none;
                 font-weight: 700;
-                font-family: 'Lato',sans-serif;
+                font-family: 'Lato', sans-serif;
                 font-size: 20px;
                 color: black;
             }
+
             #first-option {
                 margin-left: 20px;
                 margin-top: 20px;
@@ -31,9 +46,10 @@
                 text-decoration: none;
                 font-size: 20px;
                 color: black;
-                font-family: 'Lato',sans-serif;
-                font-weight: 100px;
+                font-family: 'Lato', sans-serif;
+                font-weight: 300;
             }
+
             #option {
                 margin-left: 10px;
                 margin-top: 20px;
@@ -42,25 +58,78 @@
                 text-decoration: none;
                 font-size: 20px;
                 color: black;
-                font-family: 'Lato',sans-serif;
-                font-weight: 100px;
+                font-family: 'Lato', sans-serif;
+                font-weight: 300;
             }
+
             #content-title {
                 margin-left: 20px;
-                font-weight: 100px;
-                font-family: 'Lato',sans-serif;
+                font-weight: 100;
+                font-family: 'Lato', sans-serif;
+            }
+
+            #vtb {
+                border-radius: 0px;
+                background-image: linear-gradient(to left, #00FFFD , #FF86DA);
+                box-shadow: 4px 4px 2px #888888;
+                width: 200px;
+                float: left;
+                margin: 20px;
+                height: 70px;
+                text-decoration: none;
+                color: black;
+                font-family: 'Lato', sans-serif;
+                border-top-left-radius:0px;
+                border-top-right-radius:10px;
+                border-bottom-right-radius:0px;
+                border-bottom-left-radius:10px;
+            }
+
+            #vtb_name {
+                margin-left: 10px;
+                margin-top: 10px;
+                overflow: hidden;
+                width: 140px;
+                height: 30px;
+                font-size: 20px;
+                font-weight: 500;
+            }
+
+            #belong {
+                margin-top: -20px;
+                margin-right: 10px;
+                font-size: 15px;
+                font-weight: 300;
+                float: right;
+            }
+
+            #web-info-title {
+                margin-left: 20px;
+                font-weight: 100;
+                font-family: 'Lato', sans-serif;
             }
         </style>
     </head>
     <body>
-        <div>
+        <div id=navigate>
             <a href='/index' id=title>Project Palette</a>
             <a href='/vtb_list' id=first-option>Vtubers</a>
             <a href='/group_list' id=option>社团/企业</a>
             <a href='data_list' id=option>数据汇总</a>
         </div>
-        <div>
-            <h1 id=content-title>近 期 热 门 管 人</h1>
+
+        <div id=hot-vtubers>
+            <h1 id=content-title align="center">/ / 近 期 热 门 管 人 / /</h1>
+            {% for vtb in vtbs %}
+            <a href="{{ '/vtuber/'~vtb.id }}" id=vtb>
+                <p id=vtb_name>{{ vtb.name }}</p>
+                <p id=belong>Nijisanji</p>
+            </a>
+            {% endfor %}
+        </div>
+
+        <div id=web_info>
+            <h1 id=web-info-title align="center">/ / 本站数据 / /</h1>
         </div>
     </body>
 </html>
